# PaintX

./: CMakeLists.txt  main.cpp
labs/: main.cpp
labs/lab_01/: main.cpp
labs/lab_02/: main.cpp
labs/lab_03/: main.cpp
labs/lab_04/: bst.cpp  bst.h  lab_04.cpp
labs/lab_05/: main.cpp
labs/lab_06/: CMakeLists.txt  Readme.md
labs/lab_06/client/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake
labs/lab_06/client/client/: Makefile  client  cmake_install.cmake
labs/lab_06/client/server/: Makefile  server
labs/lab_06/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server.cpp
labs/lab_06/server/client/: Makefile  client
labs/lab_06/server/server/: Makefile  cmake_install.cmake  server
labs/lab_07/: lab_07.cpp
labs/lab_08/: main.cpp
labs/lab_09/: db.cpp  db.hpp  main.cpp
labs/lab_10/: db.cpp  db.h  lab_10.cpp  utils.hpp
project/: .gitmodules  CMakeLists.txt  README.md
project/docs/: Documentation.docx  Documentation.odt  Specification.md
project/enc_temp_folder/a4a7c7df915cc763583e3b28a5e6f4d/: Line.cpp
project/src/: CMakeLists.txt  main.cpp  save.pnx  src.sln
project/src/Controllers/: Controller.cpp  Controller.h  ObjectsFactory.cpp  ObjectsFactory.h
project/src/Objects/: Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  Object.cpp  Object.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
project/src/UI/: Canvas.cpp  Canvas.h  ColorSelector.cpp  ColorSelector.h  Controller.cpp  Controller.h  FileTool.cpp  FileTool.h  LineSelector.cpp  LineSelector.h  ShapeSelector.cpp  ShapeSelector.h  ToolSelector.cpp  ToolSelector.h  UIBar.cpp  UIBar.h  Window.cpp  Window.h
project/src/Utils/: Config.h  Saver.cpp  Saver.h
project/src/src/: Canvas.h  Object.h  Rectangle.h  Window.cpp  Window.h  src.cpp  src.vcxproj  src.vcxproj.filters
